--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 *{
     margin:0;
     padding: 0;
+    font-family: 'Source Serif Pro', serif;
 }
 
 .app-container {
     border: solid 4px black;
     border-radius: 15px;
-    width: 50%;
+    max-width: 300px;
     margin: 40px auto;
     background-color: aliceblue;
 }
@@ -32,6 +33,11 @@
 
 #go{
     padding: 5px;
+    background-color: white;
+}
+
+#go:hover {
+    cursor: pointer;
 }
 
 .location-header{
