--- a/style.css
+++ b/style.css
@@ -52,6 +52,21 @@ p, h1, h2, h3, h4{
     cursor: pointer;
 }
 
+.date-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.toggle-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+    
+}
+
+
 
 /*----------------------- toggle and date ----------------------------*/
 /* The switch - the box around the slider */
@@ -109,6 +124,7 @@ p, h1, h2, h3, h4{
     -ms-transform: translateX(16px);
     transform: translateX(16px);
   }
+  
   
 /*--------------------------------------------------------------------*/
 
